made some minor css changes

--- a/resources.html
+++ b/resources.html
@@ -41,60 +41,60 @@
                             <div class="col md6 xs12 resourceItems">
                                 <!--  <a href="url">link text</a> -->
                                 <ul>
-                                    <li>Alabama:  <a href="https://www.alabamapublichealth.gov/covid19/index.html">https://www.alabamapublichealth.gov/covid19/index.html</a></li>
-                                    <li>Alaska:  <a href="https://gov.alaska.gov/home/covid19news/">https://gov.alaska.gov/home/covid19news/</a></li>
-                                    <li>Arizona:  <a href="https://www.azdhs.gov/preparedness/epidemiology-disease-control/infectious-disease-epidemiology/index.php#novel-coronavirus-home">https://www.azdhs.gov/preparedness/epidemiology-disease-control/infectious-disease-epidemiology/index.php#novel-coronavirus-home</a></li>
-                                    <li>Arkansas:  <a href="https://www.healthy.arkansas.gov/programs-services/topics/novel-coronavirus">https://www.healthy.arkansas.gov/programs-services/topics/novel-coronavirus</a></li>
-                                    <li>California:  <a href="https://covid19.ca.gov/">https://covid19.ca.gov/</a></li>
-                                    <li>Colorado:  <a href="https://covid19.colorado.gov/">https://covid19.colorado.gov/</a></li>
-                                    <li>Connecticut:  <a href="https://portal.ct.gov/Coronavirus">https://portal.ct.gov/Coronavirus</a></li>
-                                    <li>Delaware:  <a href="https://coronavirus.delaware.gov/">https://coronavirus.delaware.gov/</a></li>
-                                    <li>Florida:  <a href="https://floridahealthcovid19.gov/">https://floridahealthcovid19.gov/</a></li>
-                                    <li>Georgia:  <a href="https://dph.georgia.gov/covid-19-daily-status-report">https://dph.georgia.gov/covid-19-daily-status-report</a></li>
-                                    <li>Hawaii:  <a href="https://health.hawaii.gov/news/covid-19-updates/">https://health.hawaii.gov/news/covid-19-updates/</a></li>
-                                    <li>Idaho:  <a href="https://coronavirus.idaho.gov/">https://coronavirus.idaho.gov/</a></li>
-                                    <li>Illinois:  <a href="https://coronavirus.illinois.gov/s/">https://coronavirus.illinois.gov/s/</a></li>
-                                    <li>Indiana:  <a href="https://www.coronavirus.in.gov/">https://www.coronavirus.in.gov/</a></li>
-                                    <li>Iowa:  <a href="https://coronavirus.iowa.gov/">https://coronavirus.iowa.gov/</a></li>
-                                    <li>Kansas:  <a href="https://www.coronavirus.kdheks.gov/">https://www.coronavirus.kdheks.gov/</a></li>
-                                    <li>Kentucky:  <a href="https://govstatus.egov.com/kycovid19">https://govstatus.egov.com/kycovid19</a></li>
-                                    <li>Louisiana:  <a href="http://ldh.la.gov/Coronavirus/">http://ldh.la.gov/Coronavirus/</a></li>
-                                    <li>Maine:  <a href="https://www.maine.gov/covid19/">https://www.maine.gov/covid19/</a></li>
-                                    <li>Maryland:  <a href="https://coronavirus.maryland.gov/">https://coronavirus.maryland.gov/</a></li>
-                                    <li>Massachusetts:  <a href="https://www.mass.gov/info-details/covid-19-updates-and-information">https://www.mass.gov/info-details/covid-19-updates-and-information</a></li>
-                                    <li>Michigan:  <a href="https://www.michigan.gov/coronavirus/">https://www.michigan.gov/coronavirus/</a></li>
-                                    <li>Minnesota:  <a href="https://mn.gov/covid19/">https://mn.gov/covid19/</a></li>
-                                    <li>Mississippi:  <a href="https://www.coronavirus.ms.gov/">https://www.coronavirus.ms.gov/</a></li>
-                                    <li>Missouri:  <a href="https://health.mo.gov/living/healthcondiseases/communicable/novel-coronavirus/">https://health.mo.gov/living/healthcondiseases/communicable/novel-coronavirus/</a></li>
+                                    <li><b>Alabama:</b>  <a href="https://www.alabamapublichealth.gov/covid19/index.html">https://www.alabamapublichealth.gov/covid19/index.html</a></li>
+                                    <li><b>Alaska:</b>  <a href="https://gov.alaska.gov/home/covid19news/">https://gov.alaska.gov/home/covid19news/</a></li>
+                                    <li><b>Arizona:</b>  <a href="https://www.azdhs.gov/preparedness/epidemiology-disease-control/infectious-disease-epidemiology/index.php#novel-coronavirus-home">https://www.azdhs.gov/preparedness/epidemiology-disease-control/infectious-disease-epidemiology/index.php#novel-coronavirus-home</a></li>
+                                    <li><b>Arkansas:</b>  <a href="https://www.healthy.arkansas.gov/programs-services/topics/novel-coronavirus">https://www.healthy.arkansas.gov/programs-services/topics/novel-coronavirus</a></li>
+                                    <li><b>California:</b>  <a href="https://covid19.ca.gov/">https://covid19.ca.gov/</a></li>
+                                    <li><b>Colorado:</b>  <a href="https://covid19.colorado.gov/">https://covid19.colorado.gov/</a></li>
+                                    <li><b>Connecticut:</b>  <a href="https://portal.ct.gov/Coronavirus">https://portal.ct.gov/Coronavirus</a></li>
+                                    <li><b>Delaware:</b>  <a href="https://coronavirus.delaware.gov/">https://coronavirus.delaware.gov/</a></li>
+                                    <li><b>Florida:</b>  <a href="https://floridahealthcovid19.gov/">https://floridahealthcovid19.gov/</a></li>
+                                    <li><b>Georgia:</b>  <a href="https://dph.georgia.gov/covid-19-daily-status-report">https://dph.georgia.gov/covid-19-daily-status-report</a></li>
+                                    <li><b>Hawaii:</b>  <a href="https://health.hawaii.gov/news/covid-19-updates/">https://health.hawaii.gov/news/covid-19-updates/</a></li>
+                                    <li><b>Idaho:</b>  <a href="https://coronavirus.idaho.gov/">https://coronavirus.idaho.gov/</a></li>
+                                    <li><b>Illinois:</b>  <a href="https://coronavirus.illinois.gov/s/">https://coronavirus.illinois.gov/s/</a></li>
+                                    <li><b>Indiana:</b>  <a href="https://www.coronavirus.in.gov/">https://www.coronavirus.in.gov/</a></li>
+                                    <li><b>Iowa:</b>  <a href="https://coronavirus.iowa.gov/">https://coronavirus.iowa.gov/</a></li>
+                                    <li><b>Kansas:</b>  <a href="https://www.coronavirus.kdheks.gov/">https://www.coronavirus.kdheks.gov/</a></li>
+                                    <li><b>Kentucky:</b>  <a href="https://govstatus.egov.com/kycovid19">https://govstatus.egov.com/kycovid19</a></li>
+                                    <li><b>Louisiana:</b>  <a href="http://ldh.la.gov/Coronavirus/">http://ldh.la.gov/Coronavirus/</a></li>
+                                    <li><b>Maine:</b>  <a href="https://www.maine.gov/covid19/">https://www.maine.gov/covid19/</a></li>
+                                    <li><b>Maryland:</b>  <a href="https://coronavirus.maryland.gov/">https://coronavirus.maryland.gov/</a></li>
+                                    <li><b>Massachusetts:</b>  <a href="https://www.mass.gov/info-details/covid-19-updates-and-information">https://www.mass.gov/info-details/covid-19-updates-and-information</a></li>
+                                    <li><b>Michigan:</b>  <a href="https://www.michigan.gov/coronavirus/">https://www.michigan.gov/coronavirus/</a></li>
+                                    <li><b>Minnesota:</b>  <a href="https://mn.gov/covid19/">https://mn.gov/covid19/</a></li>
+                                    <li><b>Mississippi:</b>  <a href="https://www.coronavirus.ms.gov/">https://www.coronavirus.ms.gov/</a></li>
+                                    <li><b>Missouri:</b>  <a href="https://health.mo.gov/living/healthcondiseases/communicable/novel-coronavirus/">https://health.mo.gov/living/healthcondiseases/communicable/novel-coronavirus/</a></li>
                                 </ul>
                             </div>
                             <div class="col md6 xs12 resourceItems">
                                 <ul>
-                                    <li>Montana:  <a href="https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt">https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt</a></li>
-                                    <li>Nebraska:  <a href="http://dhhs.ne.gov/Pages/Coronavirus.aspx">http://dhhs.ne.gov/Pages/Coronavirus.aspx</a></li>
-                                    <li>Nevada:  <a href="https://nvhealthresponse.nv.gov/">https://nvhealthresponse.nv.gov/</a></li>
-                                    <li>New Hampshire:  <a href="https://www.nh.gov/covid19/">https://www.nh.gov/covid19/</a></li>
-                                    <li>New Jersey:  <a href="https://covid19.nj.gov/">https://covid19.nj.gov/</a></li>
-                                    <li>New Mexico:  <a href="cv.nmhealth.org">cv.nmhealth.org</a></li>
-                                    <li>New York:  <a href="https://coronavirus.health.ny.gov/home">https://coronavirus.health.ny.gov/home</a></li>
-                                    <li>North Carolina:  <a href="https://www.ncdhhs.gov/divisions/public-health/covid19">https://www.ncdhhs.gov/divisions/public-health/covid19</a></li>
-                                    <li>North Dakota:  <a href="https://www.health.nd.gov/diseases-conditions/coronavirus">https://www.health.nd.gov/diseases-conditions/coronavirus</a></li>
-                                    <li>Ohio:  <a href="https://coronavirus.ohio.gov/wps/portal/gov/covid-19/home">https://coronavirus.ohio.gov/wps/portal/gov/covid-19/home</a></li>
-                                    <li>Oklahoma:  <a href="https://coronavirus.health.ok.gov/">https://coronavirus.health.ok.gov/</a></li>
-                                    <li>Oregon:  <a href="https://govstatus.egov.com/OR-OHA-COVID-19">https://govstatus.egov.com/OR-OHA-COVID-19</a></li>
-                                    <li>Pennsylvania:  <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx">https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a></li>
-                                    <li>Rhode Island:  <a href="https://health.ri.gov/diseases/ncov2019/">https://health.ri.gov/diseases/ncov2019/</a></li>
-                                    <li>South Carolina:  <a href="https://www.scdhec.gov/infectious-diseases/viruses/coronavirus-disease-2019-covid-19">https://www.scdhec.gov/infectious-diseases/viruses/coronavirus-disease-2019-covid-19</a></li>
-                                    <li>South Dakota:  <a href="https://covid.sd.gov/">https://covid.sd.gov/</a></li>
-                                    <li>Tennessee:  <a href="https://www.tn.gov/governor/covid-19.html">https://www.tn.gov/governor/covid-19.html</a></li>
-                                    <li>Texas:  <a href="https://www.dshs.texas.gov/coronavirus/">https://www.dshs.texas.gov/coronavirus/</a></li>
-                                    <li>Utah:  <a href="https://coronavirus.utah.gov/">https://coronavirus.utah.gov/</a></li>
-                                    <li>Vermont:  <a href="https://www.healthvermont.gov/response/coronavirus-covid-19">https://www.healthvermont.gov/response/coronavirus-covid-19</a></li>
-                                    <li>Virginia:  <a href="https://www.virginia.gov/coronavirus/">https://www.virginia.gov/coronavirus/</a></li>
-                                    <li>Washington:  <a href="https://coronavirus.wa.gov/">https://coronavirus.wa.gov/</a></li>
-                                    <li>West Virginia:  <a href="https://dhhr.wv.gov/COVID-19/Pages/default.aspx">https://dhhr.wv.gov/COVID-19/Pages/default.aspx</a></li>
-                                    <li>Wisconsin:  <a href="https://www.dhs.wisconsin.gov/covid-19/index.htm">https://www.dhs.wisconsin.gov/covid-19/index.htm</a></li>
-                                    <li>Wyoming:  <a href="https://health.wyo.gov/publichealth/infectious-disease-epidemiology-unit/disease/novel-coronavirus/">https://health.wyo.gov/publichealth/infectious-disease-epidemiology-unit/disease/novel-coronavirus/</a></li>
+                                    <li><b>Montana:</b>  <a href="https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt">https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt</a></li>
+                                    <li><b>Nebraska:</b>  <a href="http://dhhs.ne.gov/Pages/Coronavirus.aspx">http://dhhs.ne.gov/Pages/Coronavirus.aspx</a></li>
+                                    <li><b>Nevada:</b>  <a href="https://nvhealthresponse.nv.gov/">https://nvhealthresponse.nv.gov/</a></li>
+                                    <li><b>New Hampshire:</b>  <a href="https://www.nh.gov/covid19/">https://www.nh.gov/covid19/</a></li>
+                                    <li><b>New Jersey:</b>  <a href="https://covid19.nj.gov/">https://covid19.nj.gov/</a></li>
+                                    <li><b>New Mexico:</b>  <a href="cv.nmhealth.org">cv.nmhealth.org</a></li>
+                                    <li><b>New York:</b>  <a href="https://coronavirus.health.ny.gov/home">https://coronavirus.health.ny.gov/home</a></li>
+                                    <li><b>North Carolina:</b>  <a href="https://www.ncdhhs.gov/divisions/public-health/covid19">https://www.ncdhhs.gov/divisions/public-health/covid19</a></li>
+                                    <li><b>North Dakota:</b>  <a href="https://www.health.nd.gov/diseases-conditions/coronavirus">https://www.health.nd.gov/diseases-conditions/coronavirus</a></li>
+                                    <li><b>Ohio:</b>  <a href="https://coronavirus.ohio.gov/wps/portal/gov/covid-19/home">https://coronavirus.ohio.gov/wps/portal/gov/covid-19/home</a></li>
+                                    <li><b>Oklahoma:</b>  <a href="https://coronavirus.health.ok.gov/">https://coronavirus.health.ok.gov/</a></li>
+                                    <li><b>Oregon:</b>  <a href="https://govstatus.egov.com/OR-OHA-COVID-19">https://govstatus.egov.com/OR-OHA-COVID-19</a></li>
+                                    <li><b>Pennsylvania:</b>  <a href="https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx">https://www.health.pa.gov/topics/disease/coronavirus/Pages/Coronavirus.aspx</a></li>
+                                    <li><b>Rhode Island:</b>  <a href="https://health.ri.gov/diseases/ncov2019/">https://health.ri.gov/diseases/ncov2019/</a></li>
+                                    <li><b>South Carolina:</b>  <a href="https://www.scdhec.gov/infectious-diseases/viruses/coronavirus-disease-2019-covid-19">https://www.scdhec.gov/infectious-diseases/viruses/coronavirus-disease-2019-covid-19</a></li>
+                                    <li><b>South Dakota:</b>  <a href="https://covid.sd.gov/">https://covid.sd.gov/</a></li>
+                                    <li><b>Tennessee:</b>  <a href="https://www.tn.gov/governor/covid-19.html">https://www.tn.gov/governor/covid-19.html</a></li>
+                                    <li><b>Texas:</b>  <a href="https://www.dshs.texas.gov/coronavirus/">https://www.dshs.texas.gov/coronavirus/</a></li>
+                                    <li><b>Utah:</b>  <a href="https://coronavirus.utah.gov/">https://coronavirus.utah.gov/</a></li>
+                                    <li><b>Vermont:</b>  <a href="https://www.healthvermont.gov/response/coronavirus-covid-19">https://www.healthvermont.gov/response/coronavirus-covid-19</a></li>
+                                    <li><b>Virginia:</b>  <a href="https://www.virginia.gov/coronavirus/">https://www.virginia.gov/coronavirus/</a></li>
+                                    <li><b>Washington:</b>  <a href="https://coronavirus.wa.gov/">https://coronavirus.wa.gov/</a></li>
+                                    <li><b>West Virginia:</b>  <a href="https://dhhr.wv.gov/COVID-19/Pages/default.aspx">https://dhhr.wv.gov/COVID-19/Pages/default.aspx</a></li>
+                                    <li><b>Wisconsin:</b>  <a href="https://www.dhs.wisconsin.gov/covid-19/index.htm">https://www.dhs.wisconsin.gov/covid-19/index.htm</a></li>
+                                    <li><b>Wyoming:</b>  <a href="https://health.wyo.gov/publichealth/infectious-disease-epidemiology-unit/disease/novel-coronavirus/">https://health.wyo.gov/publichealth/infectious-disease-epidemiology-unit/disease/novel-coronavirus/</a></li>
                                 </ul>
                             </div>
                         </div>
