hid get started button until we can decide what to do with it

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="row center">
           <h5 class="header col s12 light">Keep up to date with local statistics</h5>
         </div>
-        <div class="row center">
+        <!-- <div class="row center">
           <a href="#" id="download-button" class="btn-large waves-effect waves-light brown lighten-1">Get Started</a>
-        </div>
+        </div> -->
         <br><br>
 
       </div>
