changed one word to demo git bash

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h5 class="center">Find local information</h5>
 
             <p class="light">It can be really difficult to find factual, up-to-date information. We've gathered sources
-              to make that easier for you.</p>
+              to make this easier for you.</p>
           </div>
         </div>
 
