adjusted footer position and removed placeholder

--- a/statistics.html
+++ b/statistics.html
@@ -122,43 +122,47 @@
     </div>
     </div>
 
-    <footer class="page-footer brown">
+  
+    <footer class="page-footer white">
         <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    <h5 class="white-text">Company Bio</h5>
-                    <p class="grey-text text-lighten-4">We are a small group of aspiring web developers working on our
-                        first
-                        project. We hope to not only make something functional, but something relevant and helpful to
-                        the community.
-                    </p>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Placeholder</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
-                    <h5 class="white-text">Placeholder</h5>
-                    <ul>
-                        <li><a class="white-text" href="#!">Link 1</a></li>
-                        <li><a class="white-text" href="#!">Link 2</a></li>
-                        <li><a class="white-text" href="#!">Link 3</a></li>
-                        <li><a class="white-text" href="#!">Link 4</a></li>
-                    </ul>
-                </div>
+          <div class="row">
+            <div class="col footer-text">
+              <h5 class="black-text">Company Bio</h5>
+              <p class="black-text">
+                We are a small group of aspiring web developers working on our
+                first project. We hope to not only make something functional, but
+                something relevant and helpful to the community.
+              </p>
             </div>
+            <!-- <div class="col l3 s12">
+              <h5 class="white-text">Placeholder</h5>
+              <ul>
+                <li><a class="white-text" href="#!">Link 1</a></li>
+                <li><a class="white-text" href="#!">Link 2</a></li>
+                <li><a class="white-text" href="#!">Link 3</a></li>
+                <li><a class="white-text" href="#!">Link 4</a></li>
+              </ul>
+            </div>
+            <div class="col l3 s12">
+              <h5 class="white-text">Placeholder</h5>
+              <ul>
+                <li><a class="white-text" href="#!">Link 1</a></li>
+                <li><a class="white-text" href="#!">Link 2</a></li>
+                <li><a class="white-text" href="#!">Link 3</a></li>
+                <li><a class="white-text" href="#!">Link 4</a></li>
+              </ul>
+            </div> -->
+          </div>
         </div>
         <div class="footer-copyright">
-            <div class="container">
-                Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-            </div>
+          <div class="container black-text">
+            Made by
+            <a class="grey-text lighten-1" href="http://materializecss.com"
+              >Materialize</a
+            >
+          </div>
         </div>
-    </footer>
+      </footer>
 
 
     <!--  Scripts-->
