styled navbar and fixed mobile responsiveness

--- a/testLocations.html
+++ b/testLocations.html
@@ -13,22 +13,27 @@
 </head>
 
 <body>
-    <nav class="white" role="navigation">
+    <nav class="brown" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="index.html" class="brand-logo">COVID-19 Info App</a>
-            <ul class="right hide-on-med-and-down">
-                <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="testLocations.html">Test Locations</a></li>
-                <li><a href="resources.html">Resources</a></li>
-            </ul>
-
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="#">Navbar Link</a></li>
-            </ul>
-            <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+          <a id="logo-container" href="index.html" class="brand-logo brown-text text-lighten-4"
+            >COVID-19 Info App</a
+          >
+          <ul class="right hide-on-med-and-down">
+            <li ><a href="statistics.html" class="brown-text text-lighten-4">Statistics</a></li>
+            <li><a href="testLocations.html" class="brown-text text-lighten-4">Test Locations</a></li>
+            <li><a href="resources.html" class="brown-text text-lighten-4">Resources</a></li>
+          </ul>
+  
+          <ul id="nav-mobile" class="sidenav brown lighten-4">
+            <li><a href="statistics.html" class="brown-text">Statistics</a></li>
+            <li><a href="testLocations.html" class="brown-text">Test Locations</a></li>
+            <li><a href="resources.html" class="brown-text">Resources</a></li>
+          </ul>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+            ><i class="material-icons brown-text text-lighten-4">menu</i></a
+          >
         </div>
-    </nav>
-
+      </nav>
     <div class="container-fluid">
         <!--  First Card with select drop down -->
         <div class="col s12 m3 l3 cardContainer">
