restyled footer to match pages

--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
       </div>
     </div>
 
-    <footer class="page-footer white">
+    <footer class="page-footer brown">
       <div class="container">
         <div class="row">
           <div class="col footer-text">
-            <h5 class="black-text">Company Bio</h5>
-            <p class="black-text">
+            <h5 class="brown-text text-lighten-4">Company Bio</h5>
+            <p class="brown-text text-lighten-4">
               We are a small group of aspiring web developers working on our
               first project. We hope to not only make something functional, but
               something relevant and helpful to the community.
@@ -204,9 +204,9 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container black-text">
+        <div class="container brown-text text-lighten-4">
           Made by
-          <a class="grey-text lighten-1" href="http://materializecss.com"
+          <a class="brown-text text-lighten-2" href="http://materializecss.com"
             >Materialize</a
           >
         </div>
