--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Find Important Information
           </h1>
           <div class="row center">
-            <h5 class="header col s12 light">
+            <h5 class="header col s12 brown-text text-lighten-2">
               Keep up to date with local statistics
             </h5>
           </div>
@@ -82,7 +82,7 @@
               <h2 class="center brown-text">
                 <i class="material-icons">group</i>
               </h2>
-              <h5 class="center">Find local information</h5>
+              <h5 class="center brown-text">Find local information</h5>
 
               <p class="light">
                 It can be really difficult to find factual, up-to-date
@@ -96,7 +96,7 @@
               <h2 class="center brown-text">
                 <i class="material-icons">favorite</i>
               </h2>
-              <h5 class="center">Check on loved ones</h5>
+              <h5 class="center brown-text">Check on loved ones</h5>
 
               <p class="light">
                 We have resources from every available source as of 4/8/2020.
@@ -111,7 +111,7 @@
               <h2 class="center brown-text">
                 <i class="material-icons">assessment</i>
               </h2>
-              <h5 class="center">Resources</h5>
+              <h5 class="center brown-text">Resources</h5>
 
               <p class="light">
                 Check this thing, that thing, or that other thing. Those are all
@@ -127,7 +127,9 @@
       <div class="section no-pad-bot">
         <div class="container">
           <div class="row center">
-            <h5 class="header col s12 light">Hope you enjoy our site!</h5>
+            <h5 class="header col s12 light">
+              <!-- placeholder -->
+            </h5>
           </div>
         </div>
       </div>
@@ -144,13 +146,13 @@
         <div class="row">
           <div class="col s12 center">
             <h3><i class="mdi-content-send brown-text"></i></h3>
-            <h4>Contact Us</h4>
+            <h4 class="brown-text">Contact Us</h4>
             <p class="left-align light">
               We began this project on April 8, 2020. We spent about two weeks
               working on it, presented it, and have made small changes since
               then. If you see room for improvement somewhere, please let us
               know! To do so, just email Morgan 
-              <a href="mailto:megannh6349@gmail.com">here</a>.
+              <a href="mailto:megannh6349@gmail.com" class="brown-text text-lighten-2">here</a>.
             </p>
           </div>
         </div>
@@ -162,7 +164,7 @@
         <div class="container">
           <div class="row center">
             <h5 class="header col s12 light">
-              Thanks for coming by! Hope to see you again!
+              <!-- placeholder -->
             </h5>
           </div>
         </div>
