Styled pages and removed pseudocode

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="parallax">
         <img
-          src="view-of-the-sky-through-a-gap-in-the-rock-1639272.jpg"
+          src="./images/view-of-the-sky-through-a-gap-in-the-rock-1639272.jpg"
           alt="A view of the sky through trees and rock"
         />
       </div>
@@ -135,7 +135,7 @@
       </div>
       <div class="parallax">
         <img
-          src="red-rocks-of-sedona-1640526.jpg"
+          src="./images/red-rocks-of-sedona-1640526.jpg"
           alt="A beautiful desert view with trees"
         />
       </div>
@@ -152,7 +152,7 @@
               working on it, presented it, and have made small changes since
               then. If you see room for improvement somewhere, please let us
               know! To do so, just email Morgan 
-              <a href="mailto:megannh6349@gmail.com" class="brown-text text-lighten-2">here</a>.
+              <a href="mailto:megannh6349@gmail.com">here</a>.
             </p>
           </div>
         </div>
@@ -170,7 +170,7 @@
         </div>
       </div>
       <div class="parallax">
-        <img src="beach-1316206.jpg" alt="A shoreline with palm trees" />
+        <img src="./images/beach-1316206.jpg" alt="A shoreline with palm trees" />
       </div>
     </div>
 
