--- a/resources.html
+++ b/resources.html
@@ -37,14 +37,14 @@
 
     <div class="container-fluid">
         <!-- Card -->
-        <div class="col-12 cardContainer resourceList">
+        <div class="col-12 cardContainer resourceList brown-text">
             <h4 class="header">Find official resources</h4>
             <h6><i>Updated as of 4/16/2020 at 9:00pm EST</i></h6>
             <div class="card state-card horizontal">
                 <div class="card-stacked">
                     <div class="card-content">
                         <div class="row">
-                            <div class="col md6 xs12 resourceItems">
+                            <div class="col md6 xs12 resourceItems brown-text">
                                 <!--  <a href="url">link text</a> -->
                                 <ul>
                                     <li><b>Alabama:</b>  <a href="https://www.alabamapublichealth.gov/covid19/index.html">https://www.alabamapublichealth.gov/covid19/index.html</a></li>
@@ -74,7 +74,7 @@
                                     <li><b>Missouri:</b>  <a href="https://health.mo.gov/living/healthcondiseases/communicable/novel-coronavirus/">https://health.mo.gov/living/healthcondiseases/communicable/novel-coronavirus/</a></li>
                                 </ul>
                             </div>
-                            <div class="col md6 xs12 resourceItems">
+                            <div class="col md6 xs12 resourceItems brown-text">
                                 <ul>
                                     <li><b>Montana:</b>  <a href="https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt">https://dphhs.mt.gov/publichealth/cdepi/diseases/coronavirusmt</a></li>
                                     <li><b>Nebraska:</b>  <a href="http://dhhs.ne.gov/Pages/Coronavirus.aspx">http://dhhs.ne.gov/Pages/Coronavirus.aspx</a></li>
