--- a/statistics.html
+++ b/statistics.html
@@ -38,16 +38,16 @@
     <div class="container-fluid">
         <!-- Card -->
         <!-- Separate container for the state search -->
-        <div class="col s12 m3 l3 cardContainer">
-            <h4 class="state-header">Enter a state below :</h4>
+        <div class="col s12 m3 l3 cardContainer ">
+            <h4 class="state-header brown-text">Enter a state below :</h4>
             <div class="card state-card horizontal">
                 <div class="card-stacked">
                     <div class="card-content">
                         <p>This can be your state, the state of a friend or family member, or anywhere else in the
-                            Country!</p>
+                            United States!</p>
                     </div>
                     <!-- Modal Trigger -->
-                    <button data-target="modal1" class="btn-large modal-trigger">Enter State</button>
+                    <button data-target="modal1" class="btn-large modal-trigger brown">Enter State</button>
                     <!-- Modal Structure -->
                     <div id="modal1" class="modal">
                         <div class="modal-content">
@@ -64,7 +64,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" id="submit-button-1"
-                                class="modal-close waves-effect waves-green btn-flat">Submit</button>
+                                class="modal-close waves-effect waves-light btn-flat brown">Submit</button>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
             </div>
             <!-- Second button and modal for "another state" -->
             <div id="modalTwo" class="hide">
-                <button data-target="modal2" class="btn-large modal-trigger">Choose another state</button>
+                <button data-target="modal2" class="btn-large modal-trigger brown">Choose another state</button>
                 <!-- Modal Structure -->
                 <div id="modal2" class="modal">
                     <div class="modal-content">
@@ -101,12 +101,11 @@
         <!-- Separate container for world statistics -->
         <div class="col s12 m3 l3 cardContainer">
             <div class="col s12 m9 l9">
-                <h4 class="world-header">World Statistics</h4>
+                <h4 class="world-header brown-text">World Statistics</h4>
                 <div class="card world-card horizontal">
                     <div class="card-stacked">
                         <div class="card-content">
-                            <p>Placeholder text, we'll build some stuff out here. Graphs, stats, and all types of shit,
-                                yo.</p>
+                            <p>Here are the most current statistics that our site was able to grab. They may not be real time, so check back later if it's not updated!</p>
                         </div>
                         <table class="responsive-table">
                             <thead>
