--- a/testLocations.html
+++ b/testLocations.html
@@ -37,16 +37,16 @@
     <div class="container-fluid">
         <!--  First Card with select drop down -->
         <div class="col s12 m3 l3 cardContainer">
-            <h4 class="header">Find a test center near you</h4>
+            <h4 class="header brown-text">Find a test center near you</h4>
             <div class="card horizontal">
                 <div class="card-stacked">
                     <div class="card-content">
                         <p>Choose from the following options!</p>
                     </div>
-                    <div class="input-field col s12">
+                    <div class="input-field col s12 brown-text">
                         <select id='states'>
-                            <option value="" disabled selected>Choose a state</option>
-                            <option value="arizona">Arizona</option>
+                            <option value="" disabled selected  class="brown-text">Choose a state</option>
+                            <option value="arizona" class="brown-text">Arizona</option>
                             <option value="california">California</option>
                             <option value="delaware">Delaware</option>
                             <option value="florida">Florida</option>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <!-- Second Card with test locations  -->
-        <div class="col s12 m3 l3 cardContainer">
+        <div class="col s12 m3 l3 cardContainer brown-text">
             <div id='testing-location'>
             </div>
         </div>
